--- a/arcane_arcade-frontend-master/package.json
+++ b/arcane_arcade-frontend-master/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@tippyjs/react": "^4.2.0",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.2",
     "bulma": "^0.9.0",
     "intl-tel-input": "^17.0.5",
     "mobx": "^5.15.7",
@@ -22,6 +23,7 @@
     "node-sass": "^4.14.1",
     "particles.js": "^2.0.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-cookie": "^4.0.3",
     "react-countdown": "^2.2.1",
     "react-dom": "^16.13.1",
@@ -32,6 +34,7 @@
     "react-scripts": "3.4.3",
     "react-slick": "^0.27.11",
     "react-sortable-hoc": "^1.11.0",
+    "react-tabs": "^3.1.1",
     "react-tag-autocomplete": "^6.1.0",
     "react-toastify": "^6.0.8",
     "tippy.js": "^6.2.6",
